# sieve-helper

./: README.md  com.leonardodeglinnocenti.SieveHelper.json  meson.build
data/: com.leonardodeglinnocenti.SieveHelper.desktop.in  com.leonardodeglinnocenti.SieveHelper.gschema.xml  com.leonardodeglinnocenti.SieveHelper.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  sieve-helper.gresource.xml  sieve-helper.in  sieve_config_generator.py  window.py  window.ui
